--- a/code/1_Anscombe/anscombe.ipynb
+++ b/code/1_Anscombe/anscombe.ipynb
@@ -20,7 +20,7 @@
     "| Mean of y |\t7.50 | to 2 decimal places |\n",
     "| Sample variance of y : $\\sigma^{2}$ | 4.125 | ±0.003 |\n",
     "| Correlation between x and y |\t0.816 | to 3 decimal places |\n",
-    "| Linear regression line | $y=3.00+0.500x$ |\tto 2 and 3 decimal places, respectively |\n",
+    "| Linear regression line | $$y=3.00+0.500x$$ |\tto 2 and 3 decimal places, respectively |\n",
     "| Coefficient of determination of the linear regression : $R^{2}$ | 0.67 |\tto 2 decimal places |\n",
     "\n",
     "\n",
