--- a/code/1_Anscombe/anscombe.ipynb
+++ b/code/1_Anscombe/anscombe.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Anscome’s Quartet  [*\"Graphs in Statistical Analysis\" Anscombe, F. J. (1973)*](https://www.sjsu.edu/faculty/gerstman/StatPrimer/anscombe1973.pdf) is a set of four distinct data sets each consisting of 11 `(x,y)` pairs where each dataset produces the same summary statistics: \n",
+    "Anscome’s Quartet  [\"Graphs in Statistical Analysis\" Anscombe, F. J. (1973)](https://www.sjsu.edu/faculty/gerstman/StatPrimer/anscombe1973.pdf) is a set of four distinct data sets each consisting of 11 `(x,y)` pairs where each dataset produces the same summary statistics: \n",
     "\n",
     "| Property | Value | Accuracy |\n",
     "| :- |:-------------: | -: |\n",
