added dino to notebook

--- a/code/1_Anscombe/anscombe.ipynb
+++ b/code/1_Anscombe/anscombe.ipynb
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -516,29 +516,29 @@
        "[1704 rows x 3 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Read data from csv and preview\n",
-    "datasaurus_df = pd.read_csv(\"../../datasets/DatasaurusDozen.csv\")\n",
+    "datasaurus_df = pd.read_csv(\"https://raw.githubusercontent.com/emmanueliarussi/DataScienceCapstone/master/datasets/DatasaurusDozen.csv\")\n",
     "datasaurus_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x11238a350>"
+       "<seaborn.axisgrid.FacetGrid at 0x112dca4d0>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -556,7 +556,7 @@
    "source": [
     "# Plot each dataset\n",
     "g = sns.FacetGrid(datasaurus_df, col_wrap=4, col=\"dataset\", hue=\"dataset\") # define a grid of plots. Each element shows a different memeber from the quartet in a different column and color\n",
-    "g.map(plt.scatter, \"x\", \"y\", alpha=.7)                         # render scatterplots"
+    "g.map(plt.scatter, \"x\", \"y\", alpha=.7)                                     # render scatterplots"
    ]
   },
   {
