--- a/code/2_TextClassification/text_classifier.ipynb
+++ b/code/2_TextClassification/text_classifier.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,6 +152,7 @@
     "from nltk.corpus   import stopwords \n",
     "from nltk.tokenize import TweetTokenizer\n",
     "from nltk.stem     import PorterStemmer\n",
+    "import nltk\n",
     "import string\n",
     "import re\n",
     "\n",
@@ -170,6 +171,7 @@
     "emojis = emojis_happy.union(emojis_sad)\n",
     " \n",
     "# English stop words set\n",
+    "nltk.download('stopwords')\n",
     "stopwords_english  = set(stopwords.words(\"english\"))\n",
     "    \n",
     "# Tokenizer \n",
