--- a/3_MidtermProjects/ProjectBOM/main.ipynb
+++ b/3_MidtermProjects/ProjectBOM/main.ipynb
@@ -241,7 +241,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "attributes_spotify = pd.read_csv(\"data/attributes_spotify.csv\")\n",
+    "attributes_spotify = pd.read_csv(\"https://raw.githubusercontent.com/emmanueliarussi/DataScienceCapstone/master/3_MidtermProjects/ProjectBOM/data/attributes_spotify.csv\")\n",
     "attributes_spotify.describe()"
    ]
   },
