--- a/3_MidtermProjects/ProjectFN/main.ipynb
+++ b/3_MidtermProjects/ProjectFN/main.ipynb
@@ -4,24 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classifying Fake News\n"
+    "# Classifying Fake News\n",
+    "Your goal is to use this data set to make an algorithm able to determine if an article is fake news or not. We provide you with 2 files, one with news labeled as fake, and another with news labeles as containing true information. You have four columns on each file title/text/subject/date.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "true_news = pd.read_csv(\"https://raw.githubusercontent.com/emmanueliarussi/DataScienceCapstone/master/3_MidtermProjects/ProjectFN/data/true.csv\")\n",
