--- a/3_MidtermProjects/ProjectWC/main.ipynb
+++ b/3_MidtermProjects/ProjectWC/main.ipynb
@@ -5,14 +5,12 @@
    "metadata": {},
    "source": [
     "# Wholesale Customers\n",
-    "The goal of this project is to identify and describe the various customer segments hidden in the data based on their annual spending on diverse product categories, like milk, grocery, region, etc.\n",
-    "\n",
-    "More info about this dataset in [UCI](https://archive.ics.uci.edu/ml/datasets/Wholesale+customers)."
+    "The goal of this project is to identify and describe the various customer segments hidden in the data based on their annual spending on diverse product categories, like milk, grocery, region, etc. More info about this dataset[here](https://archive.ics.uci.edu/ml/datasets/Wholesale+customers)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -48,120 +46,74 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>440.000000</td>\n",
-       "      <td>440.000000</td>\n",
-       "      <td>440.000000</td>\n",
-       "      <td>440.000000</td>\n",
-       "      <td>440.000000</td>\n",
-       "      <td>440.000000</td>\n",
-       "      <td>440.000000</td>\n",
-       "      <td>440.000000</td>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12669</td>\n",
+       "      <td>9656</td>\n",
+       "      <td>7561</td>\n",
+       "      <td>214</td>\n",
+       "      <td>2674</td>\n",
+       "      <td>1338</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>1.322727</td>\n",
-       "      <td>2.543182</td>\n",
-       "      <td>12000.297727</td>\n",
-       "      <td>5796.265909</td>\n",
-       "      <td>7951.277273</td>\n",
-       "      <td>3071.931818</td>\n",
-       "      <td>2881.493182</td>\n",
-       "      <td>1524.870455</td>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7057</td>\n",
+       "      <td>9810</td>\n",
+       "      <td>9568</td>\n",
+       "      <td>1762</td>\n",
+       "      <td>3293</td>\n",
+       "      <td>1776</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>0.468052</td>\n",
-       "      <td>0.774272</td>\n",
-       "      <td>12647.328865</td>\n",
-       "      <td>7380.377175</td>\n",
-       "      <td>9503.162829</td>\n",
-       "      <td>4854.673333</td>\n",
-       "      <td>4767.854448</td>\n",
-       "      <td>2820.105937</td>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6353</td>\n",
+       "      <td>8808</td>\n",
+       "      <td>7684</td>\n",
+       "      <td>2405</td>\n",
+       "      <td>3516</td>\n",
+       "      <td>7844</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>55.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>25.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>3.000000</td>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13265</td>\n",
+       "      <td>1196</td>\n",
+       "      <td>4221</td>\n",
+       "      <td>6404</td>\n",
+       "      <td>507</td>\n",
+       "      <td>1788</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>3127.750000</td>\n",
-       "      <td>1533.000000</td>\n",
-       "      <td>2153.000000</td>\n",
-       "      <td>742.250000</td>\n",
-       "      <td>256.750000</td>\n",
-       "      <td>408.250000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>8504.000000</td>\n",
-       "      <td>3627.000000</td>\n",
-       "      <td>4755.500000</td>\n",
-       "      <td>1526.000000</td>\n",
-       "      <td>816.500000</td>\n",
-       "      <td>965.500000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>16933.750000</td>\n",
-       "      <td>7190.250000</td>\n",
-       "      <td>10655.750000</td>\n",
-       "      <td>3554.250000</td>\n",
-       "      <td>3922.000000</td>\n",
-       "      <td>1820.250000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>112151.000000</td>\n",
-       "      <td>73498.000000</td>\n",
-       "      <td>92780.000000</td>\n",
-       "      <td>60869.000000</td>\n",
-       "      <td>40827.000000</td>\n",
-       "      <td>47943.000000</td>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>22615</td>\n",
+       "      <td>5410</td>\n",
+       "      <td>7198</td>\n",
+       "      <td>3915</td>\n",
+       "      <td>1777</td>\n",
+       "      <td>5185</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          Channel      Region          Fresh          Milk       Grocery  \\\n",
-       "count  440.000000  440.000000     440.000000    440.000000    440.000000   \n",
-       "mean     1.322727    2.543182   12000.297727   5796.265909   7951.277273   \n",
-       "std      0.468052    0.774272   12647.328865   7380.377175   9503.162829   \n",
-       "min      1.000000    1.000000       3.000000     55.000000      3.000000   \n",
-       "25%      1.000000    2.000000    3127.750000   1533.000000   2153.000000   \n",
-       "50%      1.000000    3.000000    8504.000000   3627.000000   4755.500000   \n",
-       "75%      2.000000    3.000000   16933.750000   7190.250000  10655.750000   \n",
-       "max      2.000000    3.000000  112151.000000  73498.000000  92780.000000   \n",
-       "\n",
-       "             Frozen  Detergents_Paper    Delicassen  \n",
-       "count    440.000000        440.000000    440.000000  \n",
-       "mean    3071.931818       2881.493182   1524.870455  \n",
-       "std     4854.673333       4767.854448   2820.105937  \n",
-       "min       25.000000          3.000000      3.000000  \n",
-       "25%      742.250000        256.750000    408.250000  \n",
-       "50%     1526.000000        816.500000    965.500000  \n",
-       "75%     3554.250000       3922.000000   1820.250000  \n",
-       "max    60869.000000      40827.000000  47943.000000  "
+       "   Channel  Region  Fresh  Milk  Grocery  Frozen  Detergents_Paper  Delicassen\n",
+       "0        2       3  12669  9656     7561     214              2674        1338\n",
+       "1        2       3   7057  9810     9568    1762              3293        1776\n",
+       "2        2       3   6353  8808     7684    2405              3516        7844\n",
+       "3        1       3  13265  1196     4221    6404               507        1788\n",
+       "4        2       3  22615  5410     7198    3915              1777        5185"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +121,7 @@
    "source": [
     "import pandas as pd\n",
     "customers = pd.read_csv(\"https://raw.githubusercontent.com/emmanueliarussi/DataScienceCapstone/master/3_MidtermProjects/ProjectWC/data/wholesale_customers_data.csv\")\n",
-    "customers.describe()"
+    "customers.head()"
    ]
   },
   {
