--- a/3_MidtermProjects/ProjectFD/main.ipynb
+++ b/3_MidtermProjects/ProjectFD/main.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Predicting Flight Delays\n",
-    "The goal of this project is predict flight delays in the month of January. "
+    "The goal of this project is to build a model able to predict flight delays in the month of January. Take some time to understand the data, which airlines have the most percentage of delayed flights? Which airports have the most percentage of delayed flights? Is there any relationship between distance and delay? More info about this data [here](https://www.kaggle.com/divyansh22/flight-delay-prediction)"
    ]
   },
   {
