--- a/3_MidtermProjects/ProjectIMDB/main.ipynb
+++ b/3_MidtermProjects/ProjectIMDB/main.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Predicting IMDB Rating for Movies\n",
-    "The goal of this project is to build a model that predicts the IMDB rating score based on attributes as duration, actors or even titles. Take some time to understand the data, which movies have the highest score? is there any relationship between the score and the cast? More info about this data [here](https://www.kaggle.com/carolzhangdc/imdb-5000-movie-dataset)."
+    "The goal of this project is to build a model that predicts the IMDB rating score based on attributes as duration, actors or even titles. Take some time to understand the data, which movies have the highest score? Is there any relationship between the score and the cast? What about the movie director? More info about this data [here](https://www.kaggle.com/carolzhangdc/imdb-5000-movie-dataset)."
    ]
   },
   {
