--- a/3_MidtermProjects/ProjectTSS/main.ipynb
+++ b/3_MidtermProjects/ProjectTSS/main.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Spotify Top Songs\n",
-    "The dataset contains the daily ranking of the 200 most listened songs in 53 countries from 2017 and 2018 in Spotify. It contains more than 2 million rows, which comprises 6629 artists, 18598 songs for a total count of one hundred five billion streams count. The goal of this project is to understand which features make a song popular. To that end, you are also provided with a file cointaining data about music attributes (i.e. speechiness,acousticness, tempo) for several popular songs. Given the large size of the dataset, feel free to simplify your task by working with rankings from only one country or for a given year. More info about this data [here](https://www.kaggle.com/edumucelli/spotifys-worldwide-daily-song-ranking). "
+    "The dataset contains the daily ranking of the 200 most listened songs in 53 countries from 2017 and 2018 in Spotify. It contains more than 2 million rows, which comprises 6629 artists, 18598 songs for a total count of one hundred five billion streams count. The goal of this project is to understand which features make a song popular. To that end, you are also provided with a file cointaining data about music attributes (i.e. speechiness,acousticness, tempo) for several popular songs. Given the large size of the dataset, feel free to simplify your task by working with rankings from only one country or for a single year. More info about this data [here](https://www.kaggle.com/edumucelli/spotifys-worldwide-daily-song-ranking). "
    ]
   },
   {
