--- a/3_MidtermProjects/ProjectFN/main.ipynb
+++ b/3_MidtermProjects/ProjectFN/main.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "import pandas as pd\n",
     "true_news = pd.read_csv(\"https://raw.githubusercontent.com/emmanueliarussi/DataScienceCapstone/master/3_MidtermProjects/ProjectFN/data/true.csv\")\n",
-    "true_news.describe()"
+    "true_news.head()"
    ]
   },
   {
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "fake_news = pd.read_csv(\"https://raw.githubusercontent.com/emmanueliarussi/DataScienceCapstone/master/3_MidtermProjects/ProjectFN/data/fake.csv\")\n",
-    "fake_news.describe()"
+    "fake_news.head()"
    ]
   },
   {
