--- a/3_MidtermProjects/ProjectUSA/main.ipynb
+++ b/3_MidtermProjects/ProjectUSA/main.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Violent Crime Rates by US State\n",
-    "This data set contains statistics, in arrests per 100,000 residents for assault, murder, and rape in each of the 50 US states in 1973. Also given is the percent of the population living in urban areas. The goal of this project is to identify hierarchies of clusters of US states according to violent crime rates data [here](https://stat.ethz.ch/R-manual/R-devel/library/datasets/html/USArrests.html). "
+    "This data set contains statistics, in arrests per 100,000 residents for assault, murder, and rape in each of the 50 US states in 1973. Also given is the percent of the population living in urban areas. The goal of this project is to identify hierarchies of clusters of US states according to violent crime rates data [here](https://stat.ethz.ch/R-manual/R-devel/library/datasets/html/USArrests.html). Feel free to augment this data set with other sources. "
    ]
   },
   {
