--- a/3_MidtermProjects/ProjectWNF/main.ipynb
+++ b/3_MidtermProjects/ProjectWNF/main.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Wine Reviews\n",
-    "The goal of this project is to regress wine prices from atributes like country, region, and points on [wineenthusiast.com](https://www.wineenthusiast.com/). You are provided with almost 300K reviews scraped from WineEnthusiast during June 15th, 2017. Think about interesting questions you could answer with this data, which wines are most positively reviewed? does this positivity correlates with its price? More info about this data set [here](https://www.kaggle.com/zynicide/wine-reviews). "
+    "The goal of this project is to regress wine prices from atributes like country, region, and points on [wineenthusiast.com](https://www.wineenthusiast.com/). You are provided with almost 300K reviews scraped from WineEnthusiast during June and November 2017. Think about some interesting questions you could answer with this data: which wines are most positively reviewed? does this positivity correlates with its price? More info about this data set [here](https://www.kaggle.com/zynicide/wine-reviews). "
    ]
   },
   {
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wine_revs_2 = pd.read_csv(\"https://raw.githubusercontent.com/emmanueliarussi/DataScienceCapstone/master/3_MidtermProjects/ProjectWNF/data/winemag-winemag-data-second130k.csv\")\n",
+    "wine_revs_2 = pd.read_csv(\"https://raw.githubusercontent.com/emmanueliarussi/DataScienceCapstone/master/3_MidtermProjects/ProjectWNF/data/winemag-data-second130k.csv\")\n",
     "wine_revs_2.head()"
    ]
   }
