--- a/3_MidtermProjects/ProjectWNF/main.ipynb
+++ b/3_MidtermProjects/ProjectWNF/main.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Wine Reviews\n",
-    "The goal of this project is to regress wine prices from atributes like country, region, and points on [wineenthusiast.com](https://www.wineenthusiast.com/). You are provided with almost 300K reviews scraped from WineEnthusiast during June and November 2017. Think about some interesting questions you could answer with this data: which wines are most positively reviewed? does this positivity correlates with its price? More info about this data set [here](https://www.kaggle.com/zynicide/wine-reviews). "
+    "The goal of this project is to regress wine prices from atributes like country, region, and points on [wineenthusiast](https://www.wineenthusiast.com/). You are provided with almost 300K reviews scraped from WineEnthusiast during June and November 2017. Think about some interesting questions you could answer with this data: which wines are most positively reviewed? does this positivity correlates with its price? More info about this data set [here](https://www.kaggle.com/zynicide/wine-reviews). "
    ]
   },
   {
