--- a/3_MidtermProjects/ProjectGTZ/main.ipynb
+++ b/3_MidtermProjects/ProjectGTZ/main.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "# Download and unzip\n",
     "dataroot = \"dataroot/\"\n",
-    "!mkdir data_faces && wget https://www.kaggle.com/carlthome/gtzan-genre-collection/download\n",
+    "!mkdir dataroot && wget https://www.kaggle.com/carlthome/gtzan-genre-collection/download\n",
     "\n",
     "import zipfile\n",
     "with zipfile.ZipFile(\"401454_770223_bundle_archive.zip\",\"r\") as zip_ref:\n",
