added rainbow guru

--- a/3_MidtermProjects/ProjectCXR/main.ipynb
+++ b/3_MidtermProjects/ProjectCXR/main.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pneumonia Detection in Chest X-Ray Images\n",
+    "# COVID-19 Detection in Chest X-Ray Images\n",
     "The goal of this project is to build a model that identifies COVID-19, pneumonia in chest X-Ray images. The dataset is organized into 3 folders (COVID-19 cases, Normal , Pneumonia) and contains subfolders for each image category. There are 606 X-Ray images (JPEG). Data from [Mendeley](https://data.mendeley.com/datasets/fvk7h5dg2p/1). "
    ]
   },
