--- a/3_MidtermProjects/ProjectRTS/main.ipynb
+++ b/3_MidtermProjects/ProjectRTS/main.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Recognizing Traffic Signs\n",
-    "The goal of project is to build a model capable of determining the type of traffic sign that is displayed in an image captured in different real-life conditions such as obstructions, poor lighting, or the sign being far away.  We provide you with labeled images already splited in three files (tran/val/test) and a predefined list of signs to recognise. "
+    "The goal of this project is to build a model capable of determining the type of traffic sign that is displayed in an image captured under different real-life conditions and showing obstructions, poor lighting, or even the sign being far away from the camera. We provide you with labeled images already splited in three files (tran/val/test) and a predefined list of signs to recognise. "
    ]
   },
   {
