--- a/3_MidtermProjects/ProjectPCB/main.ipynb
+++ b/3_MidtermProjects/ProjectPCB/main.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -154,19 +154,26 @@
        "   'context': ['']}]}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Load json file with paterns\n",
+    "# Load json file with answer patterns\n",
     "import requests\n",
     "import json\n",
     "\n",
     "intents = json.loads(requests.get(\"https://raw.githubusercontent.com/emmanueliarussi/DataScienceCapstone/master/3_MidtermProjects/ProjectPCB/data/intents.json\").text)\n",
     "intents"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
