added html example

--- a/4_DataWrangling/1_data_extraction_nasa.ipynb
+++ b/4_DataWrangling/1_data_extraction_nasa.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Data extraction: NASA \n",
     "\n",
-    "Data sources are very diverse. Many official sources provide us with raw online data we can directly access with python libraries like [pandas](https://pandas.pydata.org/). We now show a series of examples on retrieving raw __txt__ spreadsheets data from [NASA GISS](https://data.giss.nasa.gov/)."
+    "Data sources are very diverse. Many official sources provide us with raw online data we can directly access with python libraries like [pandas](https://pandas.pydata.org/). We now show a series of examples on retrieving raw __txt__ spreadsheets data from [NASA GISS](https://data.giss.nasa.gov/). For a comprehensive guide on how to load various types of data into pandas dataframes please check [IO tools](https://pandas.pydata.org/pandas-docs/stable/user_guide/io.html)."
    ]
   },
   {
