--- a/4_DataWrangling/2_data_extraction_sat.ipynb
+++ b/4_DataWrangling/2_data_extraction_sat.ipynb
@@ -6,18 +6,15 @@
    "source": [
     "# Data extraction: California Education Spreadsheets\n",
     "\n",
-    "Data sources are very diverse. Many official sources provide us with raw online data we can directly access with python libraries like [pandas](https://pandas.pydata.org/). We now show a series of examples on retrieving __Excel__ spreadsheets data from [SAT test results](https://www.cde.ca.gov/ds/sp/ai/). More packages [here](http://www.python-excel.org/) to work with Excel spreadsheets and python. "
+    "Data sources are very diverse. Many official sources provide us with raw online data we can directly access with python libraries like [pandas](https://pandas.pydata.org/). We now show a series of examples on retrieving __Excel__ spreadsheets data from [SAT test results](https://www.cde.ca.gov/ds/sp/ai/). More packages [here](http://www.python-excel.org/) to work with Excel spreadsheets and python. For a comprehensive guide on how to load various types of data into pandas dataframes please check [IO tools](https://pandas.pydata.org/pandas-docs/stable/user_guide/io.html)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# parsing will require extra help\n",
-    "import re\n",
-    "\n",
     "# perform web requests from an url\n",
     "import requests\n",
     "\n",
