--- a/4_DataWrangling/4_data_extraction_amazon.ipynb
+++ b/4_DataWrangling/4_data_extraction_amazon.ipynb
@@ -35,32 +35,258 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Expected object or value",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-ba62395e434b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# Notice lines=True means the json file contains multiple objects\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_json\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msource_data_url_ami\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlines\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/pandas/util/_decorators.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    212\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    213\u001b[0m                     \u001b[0mkwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnew_arg_name\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnew_arg_value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 214\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    215\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    216\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mcast\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mF\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/pandas/io/json/_json.py\u001b[0m in \u001b[0;36mread_json\u001b[0;34m(path_or_buf, orient, typ, dtype, convert_axes, convert_dates, keep_default_dates, numpy, precise_float, date_unit, encoding, lines, chunksize, compression)\u001b[0m\n\u001b[1;32m    606\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mjson_reader\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    607\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 608\u001b[0;31m     \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson_reader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    609\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mshould_close\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    610\u001b[0m         \u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/pandas/io/json/_json.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    727\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlines\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    728\u001b[0m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mensure_str\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 729\u001b[0;31m             \u001b[0mobj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_object_parser\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_combine_lines\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    730\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    731\u001b[0m             \u001b[0mobj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_object_parser\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/pandas/io/json/_json.py\u001b[0m in \u001b[0;36m_get_object_parser\u001b[0;34m(self, json)\u001b[0m\n\u001b[1;32m    751\u001b[0m         \u001b[0mobj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    752\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtyp\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"frame\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 753\u001b[0;31m             \u001b[0mobj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFrameParser\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    754\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    755\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtyp\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"series\"\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mobj\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/pandas/io/json/_json.py\u001b[0m in \u001b[0;36mparse\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    855\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    856\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 857\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parse_no_numpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    858\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    859\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobj\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/pandas/io/json/_json.py\u001b[0m in \u001b[0;36m_parse_no_numpy\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1087\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0morient\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"columns\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1088\u001b[0m             self.obj = DataFrame(\n\u001b[0;32m-> 1089\u001b[0;31m                 \u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprecise_float\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprecise_float\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1090\u001b[0m             )\n\u001b[1;32m   1091\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0morient\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"split\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Expected object or value"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>reviewerID</th>\n",
+       "      <th>asin</th>\n",
+       "      <th>reviewerName</th>\n",
+       "      <th>helpful</th>\n",
+       "      <th>reviewText</th>\n",
+       "      <th>overall</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>unixReviewTime</th>\n",
+       "      <th>reviewTime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A2IBPI20UZIR0U</td>\n",
+       "      <td>1384719342</td>\n",
+       "      <td>cassandra tu \"Yeah, well, that's just like, u...</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>Not much to write about here, but it does exac...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>good</td>\n",
+       "      <td>1393545600</td>\n",
+       "      <td>02 28, 2014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A14VAT5EAX3D9S</td>\n",
+       "      <td>1384719342</td>\n",
+       "      <td>Jake</td>\n",
+       "      <td>[13, 14]</td>\n",
+       "      <td>The product does exactly as it should and is q...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Jake</td>\n",
+       "      <td>1363392000</td>\n",
+       "      <td>03 16, 2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A195EZSQDW3E21</td>\n",
+       "      <td>1384719342</td>\n",
+       "      <td>Rick Bennette \"Rick Bennette\"</td>\n",
+       "      <td>[1, 1]</td>\n",
+       "      <td>The primary job of this device is to block the...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>It Does The Job Well</td>\n",
+       "      <td>1377648000</td>\n",
+       "      <td>08 28, 2013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A2C00NNG1ZQQG2</td>\n",
+       "      <td>1384719342</td>\n",
+       "      <td>RustyBill \"Sunday Rocker\"</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>Nice windscreen protects my MXL mic and preven...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>GOOD WINDSCREEN FOR THE MONEY</td>\n",
+       "      <td>1392336000</td>\n",
+       "      <td>02 14, 2014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A94QU4C90B1AX</td>\n",
+       "      <td>1384719342</td>\n",
+       "      <td>SEAN MASLANKA</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>This pop filter is great. It looks and perform...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>No more pops when I record my vocals.</td>\n",
+       "      <td>1392940800</td>\n",
+       "      <td>02 21, 2014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10256</th>\n",
+       "      <td>A14B2YH83ZXMPP</td>\n",
+       "      <td>B00JBIVXGC</td>\n",
+       "      <td>Lonnie M. Adams</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>Great, just as expected.  Thank to all.</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Five Stars</td>\n",
+       "      <td>1405814400</td>\n",
+       "      <td>07 20, 2014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10257</th>\n",
+       "      <td>A1RPTVW5VEOSI</td>\n",
+       "      <td>B00JBIVXGC</td>\n",
+       "      <td>Michael J. Edelman</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>I've been thinking about trying the Nanoweb st...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Long life, and for some players, a good econom...</td>\n",
+       "      <td>1404259200</td>\n",
+       "      <td>07 2, 2014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10258</th>\n",
+       "      <td>AWCJ12KBO5VII</td>\n",
+       "      <td>B00JBIVXGC</td>\n",
+       "      <td>Michael L. Knapp</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>I have tried coated strings in the past ( incl...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Good for coated.</td>\n",
+       "      <td>1405987200</td>\n",
+       "      <td>07 22, 2014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10259</th>\n",
+       "      <td>A2Z7S8B5U4PAKJ</td>\n",
+       "      <td>B00JBIVXGC</td>\n",
+       "      <td>Rick Langdon \"Scriptor\"</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>Well, MADE by Elixir and DEVELOPED with Taylor...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Taylor Made</td>\n",
+       "      <td>1404172800</td>\n",
+       "      <td>07 1, 2014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10260</th>\n",
+       "      <td>A2WA8TDCTGUADI</td>\n",
+       "      <td>B00JBIVXGC</td>\n",
+       "      <td>TheTerrorBeyond</td>\n",
+       "      <td>[0, 0]</td>\n",
+       "      <td>These strings are really quite good, but I wou...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>These strings are really quite good, but I wou...</td>\n",
+       "      <td>1405468800</td>\n",
+       "      <td>07 16, 2014</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10261 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           reviewerID        asin  \\\n",
+       "0      A2IBPI20UZIR0U  1384719342   \n",
+       "1      A14VAT5EAX3D9S  1384719342   \n",
+       "2      A195EZSQDW3E21  1384719342   \n",
+       "3      A2C00NNG1ZQQG2  1384719342   \n",
+       "4       A94QU4C90B1AX  1384719342   \n",
+       "...               ...         ...   \n",
+       "10256  A14B2YH83ZXMPP  B00JBIVXGC   \n",
+       "10257   A1RPTVW5VEOSI  B00JBIVXGC   \n",
+       "10258   AWCJ12KBO5VII  B00JBIVXGC   \n",
+       "10259  A2Z7S8B5U4PAKJ  B00JBIVXGC   \n",
+       "10260  A2WA8TDCTGUADI  B00JBIVXGC   \n",
+       "\n",
+       "                                           reviewerName   helpful  \\\n",
+       "0      cassandra tu \"Yeah, well, that's just like, u...    [0, 0]   \n",
+       "1                                                  Jake  [13, 14]   \n",
+       "2                         Rick Bennette \"Rick Bennette\"    [1, 1]   \n",
+       "3                             RustyBill \"Sunday Rocker\"    [0, 0]   \n",
+       "4                                         SEAN MASLANKA    [0, 0]   \n",
+       "...                                                 ...       ...   \n",
+       "10256                                   Lonnie M. Adams    [0, 0]   \n",
+       "10257                                Michael J. Edelman    [0, 0]   \n",
+       "10258                                  Michael L. Knapp    [0, 0]   \n",
+       "10259                           Rick Langdon \"Scriptor\"    [0, 0]   \n",
+       "10260                                   TheTerrorBeyond    [0, 0]   \n",
+       "\n",
+       "                                              reviewText  overall  \\\n",
+       "0      Not much to write about here, but it does exac...        5   \n",
+       "1      The product does exactly as it should and is q...        5   \n",
+       "2      The primary job of this device is to block the...        5   \n",
+       "3      Nice windscreen protects my MXL mic and preven...        5   \n",
+       "4      This pop filter is great. It looks and perform...        5   \n",
+       "...                                                  ...      ...   \n",
+       "10256            Great, just as expected.  Thank to all.        5   \n",
+       "10257  I've been thinking about trying the Nanoweb st...        5   \n",
+       "10258  I have tried coated strings in the past ( incl...        4   \n",
+       "10259  Well, MADE by Elixir and DEVELOPED with Taylor...        4   \n",
+       "10260  These strings are really quite good, but I wou...        4   \n",
+       "\n",
+       "                                                 summary  unixReviewTime  \\\n",
+       "0                                                   good      1393545600   \n",
+       "1                                                   Jake      1363392000   \n",
+       "2                                   It Does The Job Well      1377648000   \n",
+       "3                          GOOD WINDSCREEN FOR THE MONEY      1392336000   \n",
+       "4                  No more pops when I record my vocals.      1392940800   \n",
+       "...                                                  ...             ...   \n",
+       "10256                                         Five Stars      1405814400   \n",
+       "10257  Long life, and for some players, a good econom...      1404259200   \n",
+       "10258                                   Good for coated.      1405987200   \n",
+       "10259                                        Taylor Made      1404172800   \n",
+       "10260  These strings are really quite good, but I wou...      1405468800   \n",
+       "\n",
+       "        reviewTime  \n",
+       "0      02 28, 2014  \n",
+       "1      03 16, 2013  \n",
+       "2      08 28, 2013  \n",
+       "3      02 14, 2014  \n",
+       "4      02 21, 2014  \n",
+       "...            ...  \n",
+       "10256  07 20, 2014  \n",
+       "10257   07 2, 2014  \n",
+       "10258  07 22, 2014  \n",
+       "10259   07 1, 2014  \n",
+       "10260  07 16, 2014  \n",
+       "\n",
+       "[10261 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# perform web requests from an url\n",
     "import pandas as pd\n",
     "\n",
-    "source_data_url_ami = \"https://github.com/emmanueliarussi/DataScienceCapstone/blob/master/4_DataWrangling/data/Musical_Instruments_5.json\"\n",
+    "source_data_url_ami = \"https://raw.githubusercontent.com/emmanueliarussi/DataScienceCapstone/master/4_DataWrangling/data/Musical_Instruments_5.json\"\n",
     "\n",
     "# Notice lines=True means the json file contains multiple objects \n",
     "data = pd.read_json(source_data_url_ami, lines=True)\n",
