added pivot example

--- a/4_DataWrangling/4_data_extraction_amazon.ipynb
+++ b/4_DataWrangling/4_data_extraction_amazon.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -277,13 +277,13 @@
        "[10261 rows x 9 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# perform web requests from an url\n",
+    "# pandas\n",
     "import pandas as pd\n",
     "\n",
     "source_data_url_ami = \"https://raw.githubusercontent.com/emmanueliarussi/DataScienceCapstone/master/4_DataWrangling/data/Musical_Instruments_5.json\"\n",
@@ -292,13 +292,6 @@
     "data = pd.read_json(source_data_url_ami, lines=True)\n",
     "data"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
