added wrangle example

--- a/4_DataWrangling/5_wrangle_pandas.ipynb
+++ b/4_DataWrangling/5_wrangle_pandas.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Wrangle Data With pandas\n",
+    "# Wrangle Data with Pandas I\n",
     "[Pandas](https://pandas.pydata.org/pandas-docs/stable/index.html) dataframe demonstration. "
    ]
   },
