--- a/4_DataWrangling/7_wrangle_pandas.ipynb
+++ b/4_DataWrangling/7_wrangle_pandas.ipynb
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1140,7 +1140,7 @@
        "5             9.97     NaN            arsenal  midfield  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1319,7 +1319,7 @@
        "9             7.50  150.01        liverpool  midfield  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1331,33 +1331,213 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-73055bf2f097>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Filling NaN with default value 0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfillna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minplace\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player</th>\n",
+       "      <th>salary</th>\n",
+       "      <th>games</th>\n",
+       "      <th>goals</th>\n",
+       "      <th>assists</th>\n",
+       "      <th>shots_on_target</th>\n",
+       "      <th>points_per_game</th>\n",
+       "      <th>points</th>\n",
+       "      <th>team</th>\n",
+       "      <th>position</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>sergio agüero</td>\n",
+       "      <td>19.2</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>34</td>\n",
+       "      <td>13.12</td>\n",
+       "      <td>209.98</td>\n",
+       "      <td>manchester city</td>\n",
+       "      <td>forward</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>eden hazard</td>\n",
+       "      <td>18.9</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>13.05</td>\n",
+       "      <td>274.04</td>\n",
+       "      <td>chelsea</td>\n",
+       "      <td>midfield</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>alexis sánchez</td>\n",
+       "      <td>17.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>29</td>\n",
+       "      <td>11.19</td>\n",
+       "      <td>223.86</td>\n",
+       "      <td>arsenal</td>\n",
+       "      <td>forward</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>yaya touré</td>\n",
+       "      <td>16.6</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>10.99</td>\n",
+       "      <td>197.91</td>\n",
+       "      <td>manchester city</td>\n",
+       "      <td>midfield</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ángel di maría</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>10.17</td>\n",
+       "      <td>132.23</td>\n",
+       "      <td>manchester united</td>\n",
+       "      <td>midfield</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>santiago cazorla</td>\n",
+       "      <td>14.8</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>9.97</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>arsenal</td>\n",
+       "      <td>midfield</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>david silva</td>\n",
+       "      <td>14.3</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>10.35</td>\n",
+       "      <td>155.26</td>\n",
+       "      <td>manchester city</td>\n",
+       "      <td>midfield</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>cesc fàbregas</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10.47</td>\n",
+       "      <td>209.49</td>\n",
+       "      <td>chelsea</td>\n",
+       "      <td>midfield</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>saido berahino</td>\n",
+       "      <td>13.8</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>7.02</td>\n",
+       "      <td>147.43</td>\n",
+       "      <td>west brom</td>\n",
+       "      <td>forward</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>steven gerrard</td>\n",
+       "      <td>13.8</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>7.50</td>\n",
+       "      <td>150.01</td>\n",
+       "      <td>liverpool</td>\n",
+       "      <td>midfield</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             player salary  games  goals  assists  shots_on_target  \\\n",
+       "0     sergio agüero   19.2   16.0     14      3.0               34   \n",
+       "1       eden hazard   18.9   21.0      8      4.0               17   \n",
+       "2    alexis sánchez   17.6    0.0     12      7.0               29   \n",
+       "3        yaya touré   16.6   18.0      7      1.0               19   \n",
+       "4    ángel di maría   15.0   13.0      3      0.0               13   \n",
+       "5  santiago cazorla   14.8   20.0      4      0.0               20   \n",
+       "6       david silva   14.3   15.0      6      2.0               11   \n",
+       "7     cesc fàbregas   14.0   20.0      2     14.0               10   \n",
+       "8    saido berahino   13.8   21.0      9      0.0               20   \n",
+       "9    steven gerrard   13.8   20.0      5      1.0               11   \n",
+       "\n",
+       "   points_per_game  points               team  position  \n",
+       "0            13.12  209.98    manchester city   forward  \n",
+       "1            13.05  274.04            chelsea  midfield  \n",
+       "2            11.19  223.86            arsenal   forward  \n",
+       "3            10.99  197.91    manchester city  midfield  \n",
+       "4            10.17  132.23  manchester united  midfield  \n",
+       "5             9.97    0.00            arsenal  midfield  \n",
+       "6            10.35  155.26    manchester city  midfield  \n",
+       "7            10.47  209.49            chelsea  midfield  \n",
+       "8             7.02  147.43          west brom   forward  \n",
+       "9             7.50  150.01          liverpool  midfield  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Filling NaN with default value 0\n",
-    "df.fillna(value=0, inplace=True)\n",
-    "df"
+    "soccer_rn.fillna(value=0, inplace=True)\n",
+    "soccer_rn"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
